@@ -12,8 +12,8 @@ RPB_XP_METHOD_0(METHOD(method_count), GPB::ServiceDescriptor, method_count)
 RPB_XP_METHOD_0(METHOD(as_character), GPB::ServiceDescriptor, DebugString)
 
 RPB_XP_METHOD_CAST_1(METHOD(getMethodByIndex), GPB::ServiceDescriptor, method, S4_MethodDescriptor)
-RPB_XP_METHOD_CAST_1(METHOD(getMethodByName), GPB::ServiceDescriptor, FindMethodByName,
-                     S4_MethodDescriptor)
+RPB_XP_METHOD_CAST_1_STRING(METHOD(getMethodByName), GPB::ServiceDescriptor, FindMethodByName,
+                            S4_MethodDescriptor)
 
 RPB_FUNCTION_1(Rcpp::CharacterVector, METHOD(getMethodNames),
                Rcpp::XPtr<GPB::ServiceDescriptor> desc) {
