@@ -1,3 +1,9 @@
+2020-05-28  Adam Cozzette  <acozzette@google.com>
+
+	* src/wrapper_ServiceDescriptor.cpp: Support FindMethodByName() taking
+	std::string_view
+	* src/RcppMacros.h: Idem
+
 2020-03-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.4.17
